--- a/conf/httpd_config.conf
+++ b/conf/httpd_config.conf
@@ -184,22 +184,9 @@ listener http {
 listener https {
   address                 *:443
   secure                  1
+  keyFile                 $SERVER_ROOT/conf/cert/admin/admin.key
+  certFile                $SERVER_ROOT/conf/cert/admin/admin.crt
+  sslProtocol             31
   map                     defdomain *
 }
-
-vhTemplate centralConfigLog {
-  templateFile            $SERVER_ROOT/conf/templates/ccl.conf
-  listeners               Default
-}
-
-vhTemplate PHP_SuEXEC {
-  templateFile            $SERVER_ROOT/conf/templates/phpsuexec.conf
-  listeners               Default
-}
-
-vhTemplate EasyRailsWithSuEXEC {
-  templateFile            $SERVER_ROOT/conf/templates/rails.conf
-  listeners               Default
-}
-
 
